# MAGE

./: .gitignore  AssociateExtension.bat  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint
CMake/: FindEGL.cmake  (+10 more)
Example/: CMakeLists.txt  main.cpp
Example/01-Editor/: CMakeLists.txt  main.cpp
Example/01-General/: CMakeLists.txt  main.cpp
Example/01-HelloTriangle/: CMakeLists.txt  main.cpp
Example/02-RotatingSquare/: CMakeLists.txt  main.cpp
Example/02-Standalone/: CMakeLists.txt  main.cpp
Example/03-General/: CMakeLists.txt  main.cpp
Example/03-ResourceManagement/: CMakeLists.txt  main.cpp
Examples/EditorExample/: CMakeLists.txt  TestApp.h  main.cpp
Source/Editor/: CMakeLists.txt
Source/Editor/API/: ImGuiAPI.h  ImGuiWindowAPI.h
Source/Editor/Core/: ConsoleSink.h  ImGuiPanel.h
Source/Editor/Domain/: DomainBase.h  DomainFile.cpp  DomainFile.h  DomainFolder.cpp  DomainFolder.h  RootPaths.h
Source/Editor/GUI/Dock/: ImGuiDock.cpp  ImGuiDock.h  MenuBar.cpp  MenuBar.h
Source/Editor/GuiWindow/: GuiWindow.h
Source/Editor/Helpers/: ImGuiListener.cpp  ImGuiListener.h  ImGuiPanelRegistry.h
Source/Editor/ImguiRenderer/: ImGuiRenderer.cpp  ImGuiRenderer.h  ImguiRenderer.cpp  ImguiRenderer.h
Source/Editor/Object/: IEditorObject.h
Source/Editor/Project/: ProjectInitializer.cpp  ProjectInitializer.h
Source/Editor/RenderModules/: ImGuiBeginModule.cpp  ImGuiBeginModule.h  ImGuiEndModule.cpp  ImGuiEndModule.h  ImGuiRenderModule.cpp  ImGuiRenderModule.h  ImGuiWindowModule.cpp  ImGuiWindowModule.h
Source/Editor/Renderer/: ImGuiRenderer.cpp  ImGuiRenderer.h
Source/Editor/Resources/: ImGuiTexture.h
Source/Editor/Settings/: ColorSettings.h
Source/Editor/Utils/: ImGuiUtils.h
Source/Engine/: CMakeLists.txt
Source/Engine/Application/: Application.cpp  Application.h  ApplicationModule.h  ApplicationModuleState.h
Source/Engine/Configuration/: ConfigCreator.cpp  ConfigCreator.h
Source/Engine/Containers/: ChunkVector.h  Guid.cpp  Guid.h  IObject.h  List.h  Queue.h  Singletons.h  String.cpp  String.h  StringView.h  Vector.h
Source/Engine/Core/: CCU.h  Core.h  Definitions.h  GlmFix.h  GlobalConsole.cpp  GlobalConsole.h  Guid.cpp  Guid.h  Helpers.h  Math.h  StdFix.h
Source/Engine/Data/: DayTime.cpp  DayTime.h  Guid.cpp  Guid.h
Source/Engine/Definitions/: Definitions.h  GlmNames.h  StdNames.h
Source/Engine/ErrorHandler/: ErrorChecker.cpp  ErrorChecker.h  SystemLog.cpp  SystemLog.h
Source/Engine/Event/: Event.h  EventHandler.h
Source/Engine/Helpers/: BitMask.h  ByteConverter.h  Singleton.h
Source/Engine/IO/: PlatformConsole.cpp  PlatformConsole.h  PlatformFile.cpp  PlatformFile.h  PlatformPath.cpp  PlatformPath.h
Source/Engine/Job/: AtomicQueue.h  IJobSystem.h  JobQueue.h  JobSystem.cpp  JobSystem.h  JobThread.h  ReadOnlyAtomicQueue.h  WorkerThread.cpp  WorkerThread.h  WorkerThreadPriority.h
Source/Engine/Math/: ColorConverter.h  Math.h  MathHelpers.h
Source/Engine/Memory/: MemoryBuffer.cpp  MemoryBuffer.h  MemoryMappedFile.cpp  MemoryMappedFile.h  MemoryOwnedBuffer.cpp  MemoryOwnedBuffer.h  OwnedBuffer.cpp  OwnedBuffer.h  OwnedMemory.cpp  OwnedMemory.h  RawBuffer.cpp  RawBuffer.h  SharedFileHelper.cpp  SharedFileHelper.h  SharedMemory.cpp  SharedMemory.h
Source/Engine/Monitor/: Monitor.cpp  Monitor.h  MonitorDesc.h
Source/Engine/Object/: API.h  IObject.h
Source/Engine/Objects/: IObject.h  Singleton.h
Source/Engine/Platform/: PlatformClipboard.cpp  PlatformClipboard.h  PlatformCriticalSection.cpp  PlatformCriticalSection.h  PlatformDirectory.cpp  PlatformDirectory.h  PlatformError.cpp  PlatformError.h  PlatformErrorMessage.cpp  PlatformErrorMessage.h  PlatformFile.cpp  PlatformFile.h  PlatformGuid.cpp  PlatformGuid.h  PlatformHardware.cpp  PlatformHardware.h  PlatformMessage.cpp  PlatformMessage.h  PlatformMonitor.cpp  PlatformMonitor.h  PlatformPath.cpp  PlatformPath.h  PlatformThread.cpp  PlatformThread.h  PlatformTime.cpp  PlatformTime.h  PlatformWindow.cpp  PlatformWindow.h
Source/Engine/Reflection/: Class.h  EnumType.h  EnumValue.h  FieldType.h  Member.h  MemberMode.h  ObjectMacros.h  Primitive.h  PrimitiveType.h  Type.cpp  Type.h  TypeDispatcher.h  TypeMode.h
Source/Engine/RenderContext/: RenderContext.cpp  RenderContext.h
Source/Engine/Renderer/: DXRenderer.cpp  DXRenderer.h  RendererContext.cpp  RendererContext.h
Source/Engine/Rendering/: RenderContext.cpp  RenderContext.h
Source/Engine/Serialization/: GenerationMacros.h  ISerialObject.h  JArray.h  JBool.h  JNumber.h  JObject.h  JString.h  ReflectionCapsule.h  ReflectionManifestServer.h
Source/Engine/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderIncluder.cpp  ShaderIncluder.h
Source/Engine/Thread/: JobSystem.cpp  JobSystem.h  Spinlock.cpp  Spinlock.h  ThreadJob.cpp  ThreadJob.h  ThreadJobState.h  WorkerThread.cpp  WorkerThread.h
Source/Engine/Time/: Time.h
Source/Engine/Win32/: Win32Clipboard.cpp  Win32Clipboard.h  Win32CriticalSection.cpp  Win32Directory.cpp  Win32Directory.h  Win32Error.cpp  Win32Error.h  Win32ErrorMessage.h  Win32File.cpp  Win32File.h  Win32Guid.cpp  Win32Guid.h  Win32Hardware.cpp  Win32Hardware.h  Win32Path.cpp  Win32Path.h  Win32Thread.h  Win32Time.cpp  Win32Time.h
Source/Engine/Window/: IndWindow.cpp  IndWindow.h  WindowAPI.h  WindowDesc.h  WindowEventType.h  WindowManager.h  WindowMode.h  WindowModule.cpp  WindowModule.h
Source/Engine/WorldSystem/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EnttCore.h  Scene.cpp  Scene.h  WorldManager.h
Source/Resource/: CMakeLists.txt
Source/Resource/Core/: IResource.h  ResourceObject.h  ResourceSubObject.h
Source/Resource/Texture/: TextureMemory.h  TextureResource.cpp  TextureResource.h  TextureResourceDesc.h
Source/Resource/TextureLoader/: TextureLoader.cpp  TextureLoader.h
Tests/: CMakeLists.txt  RingBufferTest.cpp  StringTest.cpp
UnitTest/: CMakeLists.txt  FirstTest.cpp  PlatformTest.cpp  StringTest.cpp  TestText.txt
UnitTest/Source/: ChunkVector.cpp  ChunkVectorTest.cpp  CoreTest.cpp  FileReadBenchmark.cpp  MemoryFileTest.cpp  PlatformTest.cpp
(+484 files in other folders)
