cmake_minimum_required(VERSION 3.26)

# ----------------------- PROJECT NAME -----------------------
project("MAGE")
# ------------------------------------------------------------

# ----------------------- CXX FLAGS --------------------------
if(POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  cmake_policy(SET CMP0077 NEW)
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
# ------------------------------------------------------------

# ----------------- PREPROCESSOR DEFINITIONS -----------------
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake")
# ------------------------------------------------------------

# --------------------- SETUP CONFIG -------------------------
include(SetupConfig)
SetupConfig()

option(ENABLE_CATCH_TEST "Enable testing" OFF) # This one needs to be set ON in Build/${BuildType-OS}/CMakeCache.txt
# ------------------------------------------------------------

# ----------------------- SUBDIRECTORIES ---------------------
add_subdirectory("External")
add_subdirectory("Source/Engine")
add_subdirectory("Source/Resource")
add_subdirectory("Source/Editor")

if(ENABLE_CATCH_TEST)
    enable_testing()
    add_subdirectory(UnitTest)
endif()

add_subdirectory("TestCases")
# ------------------------------------------------------------