cmake_minimum_required (VERSION 3.26 FATAL_ERROR)

# ---------------------- FILE ADDITION -----------------------
file(GLOB_RECURSE SUBDIRECTORIES "${CMAKE_SOURCE_DIR}/TestCases/*.cpp" "${CMAKE_SOURCE_DIR}/TestCases/*.h")
source_group(TREE "${CMAKE_SOURCE_DIR}/TestCases" FILES ${SUBDIRECTORIES})
add_executable(TestCases main.cpp ${SUBDIRECTORIES})
# ------------------------------------------------------------

# ---------------------- INCLUDE DIRECTORIES ----------------
target_include_directories(TestCases PRIVATE "${CMAKE_SOURCE_DIR}/Source")

target_link_libraries(TestCases PRIVATE Editor Engine)
# ------------------------------------------------------------

# ---------------------- COMPILER FLAGS ----------------------
if(WIN32)
	set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
endif()